--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
 				<div class="row">
 					<div class="col-lg-7">
 						<div class="banner_content">
-							<h3 class="text-uppercase">Привет</h3>
-							<h1 class="text-uppercase">Я Павлов Александр</h1>
-							<h5 class="text-uppercase">Веб разработчик</h5>
+							<h3 class="text-uppercase">Мы работаем</h3>
+							<h1 class="text-uppercase">Для развития</h1>
+							<h5 class="text-uppercase">вашего бизнеса</h5>
 							<div class="d-flex align-items-center">
 								<a class="primary_btn" href="#"><span>Связаться</span></a>
 								<a class="primary_btn tr-bg" href="#"><span>Резюме</span></a>
