--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 					<div class="col-lg-7">
 						<div class="banner_content">
 							<h3 class="text-uppercase">Мы работаем</h3>
-							<h1 class="text-uppercase">Для развития</h1>
+							<h1 class="text-uppercase">Для роста</h1>
 							<h5 class="text-uppercase">вашего бизнеса</h5>
 							<div class="d-flex align-items-center">
 								<a class="primary_btn" href="#"><span>Связаться</span></a>
