--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 				<div class="row">
 					<div class="col-lg-7">
 						<div class="banner_content">
-							<h3 class="text-uppercase">Мы работаем</h3>
+							<h3 class="text-uppercase">Web технологии</h3>
 							<h1 class="text-uppercase">Для роста</h1>
 							<h5 class="text-uppercase">вашего бизнеса</h5>
 							<div class="d-flex align-items-center">
