--- a/index.html
+++ b/index.html
@@ -104,9 +104,9 @@
 
 				<div class="offset-lg-1 col-lg-5">
 					<div class="main_title text-left">
-						<h2>let’s <br>
-							Introduce about <br>
-							myself</h2>
+						<h2>Полноценные решения <br>
+							для развития <br>
+							бизнеса</h2>
 						<p>
 							Whose given. Were gathered. There first subdue greater. Bearing you Whales heaven 
 							midst their. Beast creepeth. Fish days.
