--- a/index.html
+++ b/index.html
@@ -108,15 +108,15 @@
 							для развития <br>
 							бизнеса</h2>
 						<p>
-							Whose given. Were gathered. There first subdue greater. Bearing you Whales heaven 
-							midst their. Beast creepeth. Fish days.
+							Скокрость развития вашего бизнеса зависит от выбранных технологий и точности их применения. 
+							Не пытайтесь самостоятельно решить все проблемы. Просто доверьте эту работу профессионалам.
 						</p>
 						<p>
-							Is give may shall likeness made yielding spirit a itself together created after sea 
-							is in beast beginning signs open god you're gathering whose gathered cattle let. 
-							Creature whales fruit unto meat the life beginning all in under give two.
+							Мы возьмем на себя решение всех проблем под ключ. Снимем головную боль и груз в ваших плеч. 
+							Наш опыт и знания позволяют очень быстра разворачивать технологии для службы вашему бизнесу не смотря 
+							на специфику бизнеса.
 						</p>
-						<a class="primary_btn" href="#"><span>Download CV</span></a>
+						<a class="primary_btn" href="#"><span>Скачать презентацию</span></a>
 					</div>
 				</div>
 			</div>
@@ -198,16 +198,16 @@
 				<div class="offset-lg-2 col-lg-4 col-md-6">
 					<div class="client-info">
 						<div class="d-flex mb-50">
-							<span class="lage">10</span>
-							<span class="smll">Years Experience Working</span>
+							<span class="lage">2</span>
+							<span class="smll">Года опыт работы</span>
 						</div>
 						<div class="call-now d-flex">
 							<div>
 								<span class="fa fa-phone"></span>
 							</div>
 							<div class="ml-15">
-								<p>call us now</p>
-								<h3>(+1)-800-555-6789</h3>
+								<p>Позвонить сейчас</p>
+								<h3>8-919-793-4024</h3>
 							</div>
 						</div>
 					</div>
@@ -223,10 +223,10 @@
 			<div class="row justify-content-center">
 				<div class="col-lg-8 text-center">
 					<div class="main_title">
-						<h2>service offers </h2>
+						<h2>Наши услуги</h2>
 						<p>
-							Is give may shall likeness made yielding spirit a itself togeth created 
-							after sea <br> is in beast beginning signs open god you're gathering ithe
+							Мы заинтересованы в высоких показателях роста и эффективности. <br>
+							Для нас важно понимание работы вашего бизнеса.
 						</p>
 					</div>
 				</div>
@@ -235,29 +235,29 @@
 				<div class="col-lg-3 col-md-6">
 					<div class="feature_item">
 						<img src="img/services/s1.png" alt="">
-						<h4>Wp developing</h4>
-						<p>Creeping for female light years that lesser can't evening heaven isn't bearing tree</p>
+						<h4>It решения</h4>
+						<p>Точно подобранный инструмент решит любые проблемы бизнеса дешево и быстро</p>
 					</div>
 				</div>
 				<div class="col-lg-3 col-md-6">
 					<div class="feature_item">
 						<img src="img/services/s2.png" alt="">
-						<h4>UI/ux design</h4>
-						<p>Creeping for female light years that lesser can't evening heaven isn't bearing tree</p>
+						<h4>UI/ux дизайн</h4>
+						<p>Внешний вид и удобство взаимодествия для бизнеса решающий фактор. </p>
 					</div>
 				</div>
 				<div class="col-lg-3 col-md-6">
 					<div class="feature_item">
 						<img src="img/services/s3.png" alt="">
-						<h4>Web design</h4>
-						<p>Creeping for female light years that lesser can't evening heaven isn't bearing tree</p>
+						<h4>Маркетинг</h4>
+						<p>Эффективные рекламные кампании в интернете под ключ</p>
 					</div>
 				</div>
 				<div class="col-lg-3 col-md-6">
 					<div class="feature_item">
 						<img src="img/services/s4.png" alt="">
-						<h4>seo optimize</h4>
-						<p>Creeping for female light years that lesser can't evening heaven isn't bearing tree</p>
+						<h4>seo оптимизация</h4>
+						<p>Выводим ваши продукты в верхние строчки поисковых систем</p>
 					</div>
 				</div>
 			</div>
@@ -271,18 +271,18 @@
 			<div class="row">
 				<div class="col-lg-12">
 					<div class="main_title text-left">
-						<h2>quality work <br>
-							Recently done project </h2>
+						<h2>Лучшие работы <br>
+							Наши проекты - наша гордость </h2>
 					</div>
 				</div>
 			</div>
 			<div class="filters portfolio-filter">
 				<ul>
-					<li class="active" data-filter="*">all</li>
-					<li data-filter=".popular">popular</li>
-					<li data-filter=".latest"> latest</li>
-					<li data-filter=".following">following</li>
-					<li data-filter=".upcoming">upcoming</li>
+					<li class="active" data-filter="*">Все</li>
+					<li data-filter=".popular">Реклама</li>
+					<li data-filter=".latest"> Сайты</li>
+					<li data-filter=".following">Кейсы</li>
+					<li data-filter=".upcoming">В разработке</li>
 				</ul>
 			</div>
 	
@@ -453,9 +453,9 @@
 			<div class="row justify-content-center">
 				<div class="col-lg-8 text-center">
 					<div class="main_title">
-						<h2>client say about me</h2>
-						<p>Is give may shall likeness made yielding spirit a itself togeth created after sea is in beast <br>
-							 beginning signs open god you're gathering ithe</p>
+						<h2>Клиаенты о нас</h2>
+						<p>Мы всегда стараемся соблюдать договоренности. <br>
+							 И всегда даем немного больше.</p>
 					</div>
 				</div>
 			</div>
@@ -468,8 +468,8 @@
         					</div>
         					<div class="col-lg-8">
         						<div class="testi_text">
-        							<h4>Elite Martin</h4>
-									<p>Him, made can't called over won't there on divide there male fish beast own his day third seed sixth seas unto. Saw from </p>
+        							<h4>Дмитрий</h4>
+									<p>Стабильный рост моего интернет-магазина - результат работы компании bixit.ru.</p>
         						</div>
         					</div>
         				</div>
@@ -481,8 +481,8 @@
         					</div>
         					<div class="col-lg-8">
         						<div class="testi_text">
-        							<h4>Davil Saden</h4>
-									<p>Him, made can't called over won't there on divide there male fish beast own his day third seed sixth seas unto. Saw from </p>
+        							<h4>Елена</h4>
+									<p>Мы открылись совсем не давно. Но благодаря компании BIXIT у нас непрерывный поток клиентов. </p>
         						</div>
         					</div>
         				</div>
@@ -494,8 +494,8 @@
         					</div>
         					<div class="col-lg-8">
         						<div class="testi_text">
-        							<h4>Elite Martin</h4>
-									<p>Him, made can't called over won't there on divide there male fish beast own his day third seed sixth seas unto. Saw from </p>
+        							<h4>Сергей</h4>
+									<p>Задачи моего бизнеса были решены точно в срок! </p>
         						</div>
         					</div>
         				</div>
@@ -507,8 +507,8 @@
         					</div>
         					<div class="col-lg-8">
         						<div class="testi_text">
-        							<h4>Davil Saden</h4>
-									<p>Him, made can't called over won't there on divide there male fish beast own his day third seed sixth seas unto. Saw from </p>
+        							<h4>Антон</h4>
+									<p>Наш стартап показал отличные результаты благодаря компании bixit.ru. Точность выбора технологий и скорость их применения. </p>
         						</div>
         					</div>
         				</div>
