--- a/index.html
+++ b/index.html
@@ -17,9 +17,12 @@
 	<!-- main css -->
 	<link rel="stylesheet" href="css/style.css">
 	
+	<meta name="yandex-verification" content="e32c065bcbf86ff4" />
+	
 </head>
 
 <body>
+
 
 	<!-- Yandex.Metrika counter -->
 <script type="text/javascript" >
