--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
-  <title>Bixit.ru</title>
+  <title>Создание и продвижение сайтов для бизнеса - Bixit.ru</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="description" content="HTML5 website template">
-  <meta name="keywords" content="global, template, html, sass, jquery">
-  <meta name="author" content="Bucky Maler">
+  <meta name="description" content="Создание и продвижение сайтов для бизнеса +7 (919) 793-40-24">
+  <meta name="keywords" content="Разработка сайтов, реклама яндекс, реклама google, реклама гугл, продвижение бизнеса">
+  <meta name="author" content="pavlov34">
   <link rel="stylesheet" href="assets/css/main.css">
 </head>
 <body>
