--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <meta name="keywords" content="Разработка сайтов, реклама яндекс, реклама google, реклама гугл, продвижение бизнеса">
   <meta name="author" content="pavlov34">
   <link rel="stylesheet" href="assets/css/main.css">
+  <link rel="icon" type="image/svg+xml" href="assets/img/logo.svg">
 </head>
 <body>
 
