--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="keywords" content="Разработка сайтов, реклама яндекс, реклама google, реклама гугл, продвижение бизнеса">
   <meta name="author" content="pavlov34">
   <link rel="stylesheet" href="assets/css/main.css">
-  <link rel="shortcut icon" href="assets/img/logo.svg" type="svg+xml">
+  <link rel="icon" href="assets/img/logo.svg" type="image/svg+xml">
 </head>
 <body>
 
