--- a/index.html
+++ b/index.html
@@ -311,5 +311,15 @@
 <noscript><div><img src="https://mc.yandex.ru/watch/69123373" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
 <!-- /Yandex.Metrika counter -->
 
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-F7NT4PRF03"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-F7NT4PRF03');
+</script>
+
 </body>
 </html>
