--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
   <link rel="icon" href="assets/img/logo.svg" type="image/svg+xml">
 </head>
 <body>
-
+<!-- Jivosite -->
+<script src="//code-ya.jivosite.com/widget/Vp1QZKs9TM" async></script>
 <!-- notification for small viewports and landscape oriented smartphones -->
 <div class="device-notification">
   <a class="device-notification--logo" href="assets/img/logo.svg">
