--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <li><span>Работы</span></li>
             <li><span>О нас</span></li>
             <li><span>Контакты</span></li>
-            <li><span>Hire us</span></li>
+            <li><span>Связаться</span></li>
           </ul>
         </nav>
         <ul class="l-main-content main-content">
