--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
               <div class="contact--lockup">
                 <div class="modal">
                   <div class="modal--information">
-                    <p>Александрова 18а, 404121 Волжский, Россия</p>
+                    <p>ул. имени Космонавтов, 16Б, Волжский, Россия </p>
                     <a href="mailto:ouremail@gmail.com">info@bixit.ru</a>
                     <a href="tel:+148126287560">+7 919 793 40 24</a>
                   </div>
