--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div id="viewport" class="l-viewport">
       <div class="l-wrapper">
         <header class="header">
-          <a class="header--logo" href="#0">
+          <a class="header--logo" href="http://bixit.ru">
             <img src="assets/img/logo.svg" alt="Bixit">
             <p>Bixit</p>
           </a>
