--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                     <a href="tel:+148126287560">+7 919 793 40 24</a>
                   </div>
                   <ul class="modal--options">
-                    <li><a href="#0">Хабр</a></li>
+                    <li><a href="https://habr.com/ru/users/goblinhammer/">Хабр</a></li>
                     <li><a href="#0">YouTube</a></li>
                     <li><a href="info@bixit.ru">Связаться</a></li>
                   </ul>
@@ -200,7 +200,7 @@
             <div class="hire">
               <h2>Вас интересует</h2>
               <!-- checkout formspree.io for easy form setup -->
-              <form class="work-request">
+              <form class="work-request" action="https://formspree.io/f/mgepgdzo" method="POST">
                 <div class="work-request--options">
                   <span class="options-a">
                     <input id="opt-1" type="checkbox" value="app design">
