--- a/index.html
+++ b/index.html
@@ -279,6 +279,27 @@
                 </div>
                 <input type="submit" value="Отправить">
               </form>
+
+<!-- modify this form HTML and place wherever you want your form -->
+
+<form
+  action="https://formspree.io/f/mgepgdzo"
+  method="POST"
+>
+  <label>
+    Your email:
+    <input type="email" name="_replyto">
+  </label>
+  <label>
+    Your message:
+    <textarea name="message"></textarea>
+  </label>
+
+  <!-- your other form fields go here -->
+
+  <button type="submit">Send</button>
+</form>
+
             </div>
           </li>
         </ul>
