--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
                       </svg>
                       Брендбук
                     </label>
-                    <input id="opt-6" type="checkbox" value="marketing" name="_replyto">
+                    <input id="opt-6" type="checkbox" value="marketing">
                     <label for="opt-6">
                       <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                       viewBox="0 0 150 111" style="enable-background:new 0 0 150 111;" xml:space="preserve">
@@ -269,7 +269,7 @@
                 </div>
                 <div class="work-request--information">
                   <div class="information-name">
-                    <input id="name" type="text" name="_replyto" spellcheck="false">
+                    <input id="name" type="text" spellcheck="false">
                     <label for="name">Имя</label>
                   </div>
                   <div class="information-email">
