--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <meta name="author" content="pavlov34">
   <link rel="stylesheet" href="assets/css/main.css">
   <link rel="icon" href="assets/img/logo.svg" type="image/svg+xml">
+  <meta name="yandex-verification" content="e32c065bcbf86ff4" />
 </head>
 <body>
   
