--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="keywords" content="Разработка сайтов, реклама яндекс, реклама google, реклама гугл, продвижение бизнеса">
   <meta name="author" content="pavlov34">
   <link rel="stylesheet" href="assets/css/main.css">
-  <link rel="icon" href="assets/img/logo.svg" type="image/svg+xml">
+  <link rel="icon" href="assets/img/logo.png" type="image/svg+xml">
   <meta name="yandex-verification" content="e32c065bcbf86ff4" />
 </head>
 <body>
@@ -19,8 +19,8 @@
 
 <!-- notification for small viewports and landscape oriented smartphones -->
 <div class="device-notification">
-  <a class="device-notification--logo" href="assets/img/logo.svg">
-    <img src="assets/img/logo.svg" alt="Bixit">
+  <a class="device-notification--logo" href="assets/img/logo.png">
+    <img src="assets/img/logo.png" alt="Bixit">
     <p>Bixit</p>
   </a>
   <p class="device-notification--message">Bixit - это сила информационных технологий для роста вашего бизнеса.</p>
@@ -32,7 +32,7 @@
       <div class="l-wrapper">
         <header class="header">
           <a class="header--logo" href="http://bixit.ru">
-            <img src="assets/img/logo.svg" alt="Bixit">
+            <img src="assets/img/logo.png" alt="Bixit">
             <p>Bixit</p>
           </a>
           <button class="header--cta cta">Связаться</button>
