--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </header>
         <nav class="l-side-nav">
           <ul class="side-nav">
-            <li class="is-active"><span>Домой</span></li>
+            <li class="is-active"><span>Главная</span></li>
             <li><span>Работы</span></li>
             <li><span>О нас</span></li>
             <li><span>Контакты</span></li>
@@ -53,7 +53,7 @@
           <li class="l-section section section--is-active">
             <div class="intro">
               <div class="intro--banner">
-                <h1>Испытайте силу<br>интернет<br>технологий</h1>
+                <h1>Сила WEB<br>технологий<br>для бизнеса</h1>
                 <button class="cta">Связаться
                   <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 150 118" style="enable-background:new 0 0 150 118;" xml:space="preserve">
                   <g transform="translate(0.000000,118.000000) scale(0.100000,-0.100000)">
@@ -70,12 +70,12 @@
                   <p>Создаем сайты с упором на получение максимальной прибыли для бизнеса.</p>
                 </a>
                 <a href="#0">
-                  <h3>Контекстная реклама</h3>
-                  <p>Ваши клиенты должны легко находить вас в поиске Яндекс и Google.</p>
+                  <h3>Продвижение бизнеса</h3>
+                  <p>Ваши клиенты легко находут вас.</p>
                 </a>
                 <a href="#0">
-                  <h3>SEO продвижение</h3>
-                  <p>Оптимизация сайта для высоких позиций в поисковой выдаче по запросам вашей тематики.</p>
+                  <h3>Сопровождение и проектов</h3>
+                  <p>Улучшение по контретным показателям метрик для роста вашего бизнеса.</p>
                 </a>
               </div>
             </div>
@@ -86,7 +86,7 @@
               <div class="work--lockup">
                 <ul class="slider">
                   <li class="slider--item slider--item-left">
-                    <a href="#0">
+                    <a href="https://medea-med.ru">
                       <div class="slider--item-image">
                         <img src="assets/img/work-victory.jpg" alt="Medea-med.ru">
                       </div>
@@ -95,7 +95,7 @@
                     </a>
                   </li>
                   <li class="slider--item slider--item-center">
-                    <a href="#0">
+                    <a href="https://rosso34.ru">
                       <div class="slider--item-image">
                         <img src="assets/img/work-metiew-smith.jpg" alt="Rosso34.ru">
                       </div>
@@ -109,7 +109,7 @@
                         <img src="assets/img/work-alex-nowak.jpg" alt="Pravo-volgograd.ru">
                       </div>
                       <p class="slider--item-title">Pravo-volgograd.ru</p>
-                      <p class="slider--item-description">Юридические услуги в Волгоградской области.</p>
+                      <p class="slider--item-description">Юридические услуги по Волгоградской области.</p>
                     </a>
                   </li>
                   <li class="slider--item slider--item-right">
@@ -128,6 +128,33 @@
                       </div>
                       <p class="slider--item-title">Pitlane.su</p>
                       <p class="slider--item-description">Магазины автозапчастей в Волгограде и Волжском.</p>
+                    </a>
+                  </li>
+                  <li class="slider--item slider--item-right">
+                    <a href="https://tats-nails.com">
+                      <div class="slider--item-image">
+                        <img src="assets/img/work-alex-nowak.jpg" alt="Tats-nails.com">
+                      </div>
+                      <p class="slider--item-title">Tats-nails.com</p>
+                      <p class="slider--item-description">Услуги маникюра в США штат Аризона, Феникс.</p>
+                    </a>
+                  </li>
+                  <li class="slider--item slider--item-right">
+                    <a href="https://vgtz.com">
+                      <div class="slider--item-image">
+                        <img src="assets/img/work-alex-nowak.jpg" alt="vgtz.com">
+                      </div>
+                      <p class="slider--item-title">vgtz.com</p>
+                      <p class="slider--item-description">Оборонное предприятие в Волгограде.</p>
+                    </a>
+                  </li>
+                  <li class="slider--item slider--item-right">
+                    <a href="https://www.myfemida.ru">
+                      <div class="slider--item-image">
+                        <img src="assets/img/work-alex-nowak.jpg" alt="myfemida.ru">
+                      </div>
+                      <p class="slider--item-title">Myfemida.ru</p>
+                      <p class="slider--item-description">Юридические услуги по банкротству в Волгоградской области.</p>
                     </a>
                   </li>
                 </ul>
@@ -287,7 +314,7 @@
     </div>
   </div>
   <ul class="outer-nav">
-    <li class="is-active">Домой</li>
+    <li class="is-active">Главная</li>
     <li>Работы</li>
     <li>О нас</li>
     <li>Контакты</li>
