--- a/index.html
+++ b/index.html
@@ -13,9 +13,6 @@
   <meta name="yandex-verification" content="e32c065bcbf86ff4" />
 </head>
 <body>
-  
-<!-- Jivosite -->
-<script src="//code-ya.jivosite.com/widget/Vp1QZKs9TM" async></script>
 
 <!-- notification for small viewports and landscape oriented smartphones -->
 <div class="device-notification">
@@ -155,6 +152,15 @@
                       </div>
                       <p class="slider--item-title">Myfemida.ru</p>
                       <p class="slider--item-description">Юридические услуги по банкротству в Волгоградской области.</p>
+                    </a>
+                  </li>
+                  <li class="slider--item slider--item-right">
+                    <a href="https://okna-termo.ru">
+                      <div class="slider--item-image">
+                        <img src="assets/img/work-alex-nowak.jpg" alt="okna-termo.ru">
+                      </div>
+                      <p class="slider--item-title">Okna-termo.ru</p>
+                      <p class="slider--item-description">Производство пластиковых окон в Волгоградской области.</p>
                     </a>
                   </li>
                 </ul>
@@ -351,6 +357,9 @@
 
   gtag('config', 'G-F7NT4PRF03');
 </script>
+
+<!-- Jivosite -->
+<script src="//code-ya.jivosite.com/widget/Vp1QZKs9TM" async></script>
 
 </body>
 </html>
