--- a/index.html
+++ b/index.html
@@ -11,6 +11,36 @@
   <link rel="stylesheet" href="assets/css/main.css">
   <link rel="icon" href="assets/img/logo.png" type="image/svg+xml">
   <meta name="yandex-verification" content="e32c065bcbf86ff4" />
+  
+  <script type="text/javascript">document.oncontextmenu = function () {
+      return false;
+    };
+    document.onselectstart = function () {
+      if (event.srcElement.type != "text" && event.srcElement.type != "textarea" && event.srcElement.type != "password") {
+        return false;
+      }
+      else {
+        return true;
+      }
+    };
+    if (window.sidebar) {
+      document.onmousedown = function (e) {
+        var obj = e.target;
+        if (obj.tagName.toUpperCase() == 'SELECT'
+          || obj.tagName.toUpperCase() == "INPUT"
+          || obj.tagName.toUpperCase() == "TEXTAREA"
+          || obj.tagName.toUpperCase() == "PASSWORD") {
+          return true;
+        }
+        else {
+          return false;
+        }
+      };
+    }
+    document.ondragstart = function () {
+      return false;
+    };</script>
+  
 </head>
 <body>
 
